@@ -1,61 +1,102 @@
 package com.Stream_API_20.Stream_API_20;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.stereotype.Service;
+
+@Service
 public class EmploeeServiceImpl implements EmploeeService{
-    private Set<Emploee> emploees = new HashSet<>();
+    int maxEmploee = 15;
+    Map<Employee, Integer> emploees = new HashMap<>();
 
-    {
-        emploees.add(new Emploee("Андрицкая", "Светлана", 1, 86811));
-        emploees.add(new Emploee("Соболева", "Елена", 2, 80000));
-        emploees.add(new Emploee("Некрасова", "Олеся", 3, 99100));
-        emploees.add(new Emploee("Стяжкина", "Надежда", 4, 97600));
-        emploees.add(new Emploee("Лампель", "Екатерина", 5, 84667));
-        emploees.add(new Emploee("Смирнов", "Евгений", 5, 73000));
-        emploees.add(new Emploee("Леуский", "Владислав", 4, 125400));
-        emploees.add(new Emploee("Яковлев", "Андрей", 3, 95410));
-        emploees.add(new Emploee("Хохлов", "Сергей", 1, 142000));
-        emploees.add(new Emploee("Дудоров", "Олег", 1, 82000));
+    @Override
+    public Employee maxSalary(Integer salary) {
+        return null;
     }
 
     @Override
-    public Emploee maxSalary(Integer depId) {
-        Emploee emploeeInDepartament = emploees.stream()
-                .filter(emploee -> Objects.equals(emploee.getDepartmentNo(), depId))
-                .max(Comparator.comparing(Emploee::getSalary))
-                .orElseThrow(() -> new DepartmentNotFoundException("Department not found"));
-        return emploeeInDepartament;
-    }
-
-    @Override
-    public Emploee minSalary(Integer depId) {
-        Emploee emploeeInDepartment = emploees.stream()
-                .filter(emploee -> Objects.equals(emploee.getDepartmentNo(), depId))
-                .min(Comparator.comparing(Emploee::getSalary))
-                .orElseThrow(() -> new DepartmentNotFoundException("Department not found"));
-        return emploeeInDepartment;
+    public Employee minSalary(Integer salary) {
+        return null;
     }
 
     @Override
     public Set findEmploees(Integer depId) {
-        if (depId == null) {
-            return allEmploees();
-        } else {
-            return eploeesInDepartment(depId);
-        }
+        return Set.of();
     }
 
     @Override
-    public Set eploeesInDepartment(Integer depId) {
-        Set<Emploee> temp = emploees.stream()
-                .filter(emploee -> Objects.equals(emploee.getDepartmentNo(), depId))
-                .collect(Collectors.toSet());
-        return Collections.unmodifiableSet(temp);
+    public Set eploeesInDepartment(Integer departament) {
+        return Set.of();
     }
 
     @Override
     public Set allEmploees() {
-        return Collections.unmodifiableSet(emploees);
+        return Set.of();
     }
+
+    @Override
+    public String addEmploee(String firstName, String lastName) {
+        if (firstName.isEmpty() || lastName.isEmpty()) {
+            throw new FirstNameOrLastNameIsEmptyException();
+        }
+        if (!(StringUtils.isAlpha(firstName) && StringUtils.isAlpha(lastName))) {
+            throw new BadRequestException();
+        }
+        firstName = StringUtils.capitalize(firstName);
+        lastName = StringUtils.capitalize(lastName);
+        if (emploees.size() >= maxEmploee) {
+            throw new EmployeeStorageIsFullException();
+        }
+        Employee temp = new Employee(firstName, lastName);
+        String word = "";
+        if (emploees.containsKey(temp)) {
+            throw new EmployeeAlreadyAddedException();
+        } else {
+            emploees.put(temp, temp.getId());
+            word = "Success, сотрудник " + temp.toString() + ", id = " + temp.getId() + " добавлен.";
+        }
+        return word;
+    }
+
+    @Override
+    public String findEmploee(String firstName, String lastName) {
+        Employee temp = new Employee(firstName, lastName);
+        if (!emploees.containsKey(temp)) {
+            throw new EmployeeNotExistException();
+        } else { return "Сотрудник " + temp.toString() + ", id = " + emploees.get(temp) + " находится в штате."; }
+    }
+
+    @Override
+    public String delEmploee(String firstName, String lastName) {
+        Employee temp = new Employee(firstName, lastName);
+        if (!emploees.containsKey(temp)) {
+            throw new EmployeeNotExistException();
+        } else {
+            emploees.remove(temp);
+            return "Сотрудник " + temp.toString() + " удален из списка.";
+        }
+    }
+
+    public Map listOfEmploee() { return emploees; }
+
+    @Override
+    public void emploeesAbOvo() {
+        Employee temp = new Employee("Андрицкая", "Светлана");
+        buildEmploee(temp);
+        temp = new Employee("Соболева", "Елена");
+        buildEmploee(temp);
+        temp = new Employee("Некрасова", "Олеся");
+        buildEmploee(temp);
+        temp = new Employee("Стяжкина", "Надежда");
+        buildEmploee(temp);
+        temp = new Employee("Лампель", "Екатерина");
+        buildEmploee(temp);
+        temp = new Employee("Смирнов", "Евгений");
+        buildEmploee(temp);
+        temp = new Employee("Леуский", "Владислав");
+        buildEmploee(temp);
+    }
+
+    public void buildEmploee(Employee temp) { emploees.put(temp, temp.getId()); }
 }
